# thermite

./: .gitignore  404.html  LICENSE  Makefile  README.md  conda_env.lock.yaml  conda_env.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  simple_defaults.yml
classes_events/: index.html
cli_callbacks/: index.html
css/: mkdocstrings.css
docs/: classes_events.md  cli_callbacks.md  index.md  references.md
docs/examples/: advanced.md  basic.md  dataclasses.md  lists.md
examples/: advanced.md  nested.py  simple.py  subcommands.py
examples/adv/: config_file.py  config_file.yml  config_file_help.out  param_transfer.py  param_transfer_help.out  param_transfer_output.out  simclr.py  simclr_argparse.py  simclr_argparse_help.out  simclr_help.out  simclr_nested.py  simclr_nested_help.out
examples/advanced/: index.html
examples/basic/: index.html
examples/basics/: adjust_help.out  adjust_help.py  opts_to_args.out  opts_to_args.py
examples/dataclasses/: basic.out  basic.py  custom_converter.out  custom_converter.py  index.html  with_arguments.out  (+1 more)
references/: index.html
search/: search_index.json
tests/: __init__.py  conftest.py  test_command.py  test_default_defs.py  test_parameters.py  test_preprocessing.py  test_preset_config.py  test_process_objects.py  test_type_converters.py  test_utils.py
thermite/: __init__.py  callbacks.py  cli_args_splitter.py  command.py  config.py  exceptions.py  help.py  parameters.py  pp_utils.py  preprocessing.py  preset_config.py  process_objects.py  run.py  signatures.py  type_converters.py  utils.py
(+27 files in other folders)
